--- a/packages/codegen-plugin-schema/package.json
+++ b/packages/codegen-plugin-schema/package.json
@@ -1,10 +1,13 @@
 {
   "name": "@iggy/codegen-plugin-schema",
+  "version": "0.0.0",
   "packageManager": "yarn@3.0.1",
   "main": "dist/plugin.js",
   "private": true,
   "scripts": {
-    "build": "npx esbuild src/plugin.ts --outdir=dist --sourcemap --minify --format=cjs",
+    "build": "yarn run clean && yarn run compile",
+    "clean": "rm -rf ./dist",
+    "compile": "npx esbuild src/plugin.ts --outdir=dist --tsconfig=tsconfig.build.json --format=cjs --minify --sourcemap",
     "start": "yarn run build --watch",
     "test": "jest"
   },
