--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -1,10 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "module": "ESNext",
-    "jsx": "react"
-  },
-  "include": ["./src"],
-  "references": [{ "path": "../utils" }]
+    "jsx": "react",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"]
+  }
 }
