--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,25 +1,10 @@
 {
+  "extends": "./tsconfig.build.json",
   "compilerOptions": {
-    "allowJs": false,
-    "allowSyntheticDefaultImports": true,
-    "esModuleInterop": true,
-    "declaration": true,
-    "forceConsistentCasingInFileNames": true,
-    "isolatedModules": true,
-    "module": "commonjs",
-    "moduleResolution": "Node",
+    "baseUrl": "./packages",
     "noEmit": true,
-    "noFallthroughCasesInSwitch": true,
-    "noImplicitAny": true,
-    "noImplicitThis": true,
-    "noUncheckedIndexedAccess": true,
-    "resolveJsonModule": true,
-    "skipLibCheck": true,
-    "strict": true,
-    "strictBindCallApply": true,
-    "strictFunctionTypes": true,
-    "strictNullChecks": true,
-    "target": "ESNext",
-    "useDefineForClassFields": true
+    "paths": {
+      "@iggy/*": ["*/src"]
+    }
   }
 }
