--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,5 +5,7 @@ plugins:
     spec: "@yarnpkg/plugin-typescript"
   - path: .yarn/plugins/@yarnpkg/plugin-workspace-tools.cjs
     spec: "@yarnpkg/plugin-workspace-tools"
+  - path: .yarn/plugins/@ojkelly/plugin-build.cjs
+    spec: "https://yarn.build/latest"
 
 yarnPath: .yarn/releases/yarn-berry.cjs
