--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -16,5 +16,9 @@
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
     "vite": "^2.5.2"
+  },
+  "yarn.build": {
+    "input": "src",
+    "output": "dist"
   }
 }
