--- a/packages/web/tsconfig.json
+++ b/packages/web/tsconfig.json
@@ -1,7 +1,8 @@
 {
-  "extends": "../../tsconfig.json",
+  "extends": "../../tsconfig.base.json",
   "compilerOptions": {
     "jsx": "react",
     "lib": ["DOM", "DOM.Iterable", "ESNext"]
-  }
+  },
+  "include": ["./src"]
 }
