--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "^4.30.0",
     "concurrently": "^6.2.1",
     "esbuild": "^0.12.26",
+    "esbuild-runner": "^2.2.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
@@ -37,6 +38,7 @@
     "jest": "^27.2.0",
     "prettier": "^2.3.2",
     "serverless": "^2.57.0",
+    "serverless-dynamodb-local": "^0.2.40",
     "serverless-esbuild": "^1.17.1",
     "serverless-offline": "^8.1.0",
     "ts-essentials": "^8.1.0",
